packages/build/tests/error/monitor/fixtures/colors/plugin.js
const { red } = require('chalk')

module.exports = {
  onInit() {
    throw new Error(red('ColorTest'))
  },
}
